# morning-briefing

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  TESTING.md  config.example.json  pyproject.toml  run_briefing.py  test_harness.py
src/morning_briefing/: __init__.py  cli.py  database.py  email.py  extractor.py  pipeline.py  quality.py
src/morning_briefing/sources/: __init__.py  arxiv.py  hackernews.py
test_emails/: 2026-02-15.html
tests/: test_briefing.py
