[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morning-briefing"
version = "0.1.0"
description = "Personalized morning news briefing with traction-based ranking and feedback tracking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Wintermute", email = "wintermute.0207@gmail.com"}
]
keywords = ["newsletter", "news", "rss", "hn", "arxiv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
mbrief = "morning_briefing.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/morning_briefing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
